[package]
name = "zgadnij_slowo"
version = "0.1.1"
edition = "2024"

[dependencies]
eframe = "0.31.1"
egui = { version = "0.31.1", features = ["bytemuck"] }
rand = "0.9.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[workspace]
resolver = "2"

[profile.release]
lto = "thin"
strip = "debuginfo"
opt-level = "s"
debug = false